<resources>
    <string name="english">English</string>
    <string name="hebrew">עברית</string>
    <string name="app_name">Memory game</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="title">Title</string>
    <string name="user_name">Name</string>
    <string name="play_memory">Memory Game</string>
    <string name="play_flag_quiz">Quiz Game</string>
    <string name="play_trivia">Trivia</string>
    <string name="flag_next">Next -></string>
    <string name="dummy_title">dummy title</string>
    <string name="notice">Notice</string>
    <string name="content">content</string>
    <string name="user">User</string>
    <string name="change">change</string>
    <string name="theme">Theme</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="dummy_text">text_text</string>
    <string name="category">Category</string>
    <string name="welcome">Welcome</string>
    <string name="empty_field">can not be empty</string>
    <string name="error_camera_permission">In order to proceed, camera permission should be granded</string>
    <string name="settings_language">language</string>
    <string name="start_fragment_choose_game">Choose Game to Play</string>
    <string name="trivia_choose_fragment_choose_trivia">Build-up Trivia to Play</string>
    <string name="trivia_fragment_trivia">Trivia Game</string>
    <string name="flag_fragment_quize">Flag Quize Game</string>
    <string name="game_theme_fragment_chosse_theme">Choose Theme</string>
    <string name="card_size_fragment_chosse_size">Choose Cards Amount</string>
    <string name="memory_fragment_memory">Memory Game</string>
    <string name="settings_fragment_Settings">Settings</string>
    <string name="check_for_updates">Checking for updates</string>
    <string name="downloading_assets">Downloading Assets</string>
    <string name="error">Error</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="quiz_total">Total: %d /%d</string>
    <string name="quiz_correct">Correct: %d</string>
    <string name="quiz_wrong">Wrong: %d</string>
    <string name="wikipedia_country_chooser_text">Please choose</string>
    <string name="cards">%d cards</string>
    <string name="pink">Pink</string>
    <string name="grey">Grey</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="purple">Purple</string>
    <string name="ad">Andorra</string>
    <string name="ae">United Arab Emirates</string>
    <string name="af">Afghanistan</string>
    <string name="ag">Antigua and Barbuda</string>
    <string name="ai">Anguilla</string>
    <string name="al">Albania</string>
    <string name="am">Armenia</string>
    <string name="ao">Angola</string>
    <string name="aq">Antarctica</string>
    <string name="ar">Argentina</string>
    <string name="as">American Samoa</string>
    <string name="at">Austria</string>
    <string name="au">Australia</string>
    <string name="aw">Aruba</string>
    <string name="ax">Åland Islands</string>
    <string name="az">Azerbaijan</string>
    <string name="ba">Bosnia and Herzegovina</string>
    <string name="bb">Barbados</string>
    <string name="bd">Bangladesh</string>
    <string name="be">Belgium</string>
    <string name="bf">Burkina Faso</string>
    <string name="bg">Bulgaria</string>
    <string name="bh">Bahrain</string>
    <string name="bi">Burundi</string>
    <string name="bj">Benin</string>
    <string name="bl">Saint Barthélemy</string>
    <string name="bm">Bermuda</string>
    <string name="bn">Brunei</string>
    <string name="bo">Bolivia</string>
    <string name="bq">Caribbean Netherlands</string>
    <string name="br">Brazil</string>
    <string name="bs">Bahamas</string>
    <string name="bt">Bhutan</string>
    <string name="bv">Bouvet Island</string>
    <string name="bw">Botswana</string>
    <string name="by">Belarus</string>
    <string name="bz">Belize</string>
    <string name="ca">Canada</string>
    <string name="cc">Cocos (Keeling) Islands</string>
    <string name="cd">DR Congo</string>
    <string name="cf">Central African Republic</string>
    <string name="cg">Republic of the Congo</string>
    <string name="ch">Switzerland</string>
    <string name="ci">Ivory Coast</string>
    <string name="ck">Cook Islands</string>
    <string name="cl">Chile</string>
    <string name="cm">Cameroon</string>
    <string name="cn">China</string>
    <string name="co">Colombia</string>
    <string name="cr">Costa Rica</string>
    <string name="cu">Cuba</string>
    <string name="cv">Cape Verde</string>
    <string name="cw">Curaçao</string>
    <string name="cx">Christmas Island</string>
    <string name="cy">Cyprus</string>
    <string name="cz">Czech</string>
    <string name="de">Germany</string>
    <string name="dj">Djibouti</string>
    <string name="dk">Denmark</string>
    <string name="dm">Dominica</string>
    <string name="dor">Dominican Republic</string>
    <string name="dz">Algeria</string>
    <string name="ec">Ecuador</string>
    <string name="ee">Estonia</string>
    <string name="eg">Egypt</string>
    <string name="eh">Western Sahara</string>
    <string name="er">Eritrea</string>
    <string name="es">Spain</string>
    <string name="et">Ethiopia</string>
    <string name="eu">European Union</string>
    <string name="fi">Finland</string>
    <string name="fj">Fiji</string>
    <string name="fk">Falkland Islands</string>
    <string name="fm">Micronesia</string>
    <string name="fo">Faroe Islands</string>
    <string name="fr">France</string>
    <string name="ga">Gabon</string>
    <string name="gb">United Kingdom</string>
    <string name="gb_eng">England</string>
    <string name="gb_nir">Northern Ireland</string>
    <string name="gb_sct">Scotland</string>
    <string name="gb_wls">Wales</string>
    <string name="gd">Grenada</string>
    <string name="ge">Georgia</string>
    <string name="gf">French Guiana</string>
    <string name="gg">Guernsey</string>
    <string name="gh">Ghana</string>
    <string name="gi">Gibraltar</string>
    <string name="gl">Greenland</string>
    <string name="gm">Gambia</string>
    <string name="gn">Guinea</string>
    <string name="gp">Guadeloupe</string>
    <string name="gq">Equatorial Guinea</string>
    <string name="gr">Greece</string>
    <string name="gs">South Georgia</string>
    <string name="gt">Guatemala</string>
    <string name="gu">Guam</string>
    <string name="gw">Guinea_Bissau</string>
    <string name="gy">Guyana</string>
    <string name="hk">Hong Kong</string>
    <string name="hm">Heard Island and McDonald Islands</string>
    <string name="hn">Honduras</string>
    <string name="hr">Croatia</string>
    <string name="ht">Haiti</string>
    <string name="hu">Hungary</string>
    <string name="id">Indonesia</string>
    <string name="ie">Ireland</string>
    <string name="il">Israel</string>
    <string name="im">Isle of Man</string>
    <string name="in">India</string>
    <string name="io">British Indian Ocean Territory</string>
    <string name="iq">Iraq</string>
    <string name="ir">Iran</string>
    <string name="is">Iceland</string>
    <string name="it">Italy</string>
    <string name="je">Jersey</string>
    <string name="jm">Jamaica</string>
    <string name="jo">Jordan</string>
    <string name="jp">Japan</string>
    <string name="ke">Kenya</string>
    <string name="kg">Kyrgyzstan</string>
    <string name="kh">Cambodia</string>
    <string name="ki">Kiribati</string>
    <string name="km">Comoros</string>
    <string name="kn">Saint Kitts and Nevis</string>
    <string name="kp">North Korea</string>
    <string name="kr">South Korea</string>
    <string name="kw">Kuwait</string>
    <string name="ky">Cayman Islands</string>
    <string name="kz">Kazakhstan</string>
    <string name="la">Laos</string>
    <string name="lb">Lebanon</string>
    <string name="lc">Saint Lucia</string>
    <string name="li">Liechtenstein</string>
    <string name="lk">Sri Lanka</string>
    <string name="lr">Liberia</string>
    <string name="ls">Lesotho</string>
    <string name="lt">Lithuania</string>
    <string name="lu">Luxembourg</string>
    <string name="lv">Latvia</string>
    <string name="ly">Libya</string>
    <string name="ma">Morocco</string>
    <string name="mc">Monaco</string>
    <string name="md">Moldova</string>
    <string name="me">Montenegro</string>
    <string name="mf">Saint Martin</string>
    <string name="mg">Madagascar</string>
    <string name="mh">Marshall Islands</string>
    <string name="mk">North Macedonia</string>
    <string name="ml">Mali</string>
    <string name="mm">Myanmar</string>
    <string name="mn">Mongolia</string>
    <string name="mo">Macau</string>
    <string name="mp">Northern Mariana Islands</string>
    <string name="mq">Martinique</string>
    <string name="mr">Mauritania</string>
    <string name="ms">Montserrat</string>
    <string name="mt">Malta</string>
    <string name="mu">Mauritius</string>
    <string name="mv">Maldives</string>
    <string name="mw">Malawi</string>
    <string name="mx">Mexico</string>
    <string name="my">Malaysia</string>
    <string name="mz">Mozambique</string>
    <string name="na">Namibia</string>
    <string name="nc">New Caledonia</string>
    <string name="ne">Niger</string>
    <string name="nf">Norfolk Island</string>
    <string name="ng">Nigeria</string>
    <string name="ni">Nicaragua</string>
    <string name="nl">Netherlands</string>
    <string name="no">Norway</string>
    <string name="np">Nepal</string>
    <string name="nr">Nauru</string>
    <string name="nu">Niue</string>
    <string name="nz">New Zealand</string>
    <string name="om">Oman</string>
    <string name="pa">Panama</string>
    <string name="pe">Peru</string>
    <string name="pf">French Polynesia</string>
    <string name="pg">Papua New Guinea</string>
    <string name="ph">Philippines</string>
    <string name="pk">Pakistan</string>
    <string name="pl">Poland</string>
    <string name="pm">Saint Pierre and Miquelon</string>
    <string name="pn">Pitcairn Islands</string>
    <string name="pr">Puerto Rico</string>
    <string name="ps">Palestine</string>
    <string name="pt">Portugal</string>
    <string name="pw">Palau</string>
    <string name="py">Paraguay</string>
    <string name="qa">Qatar</string>
    <string name="re">Réunion</string>
    <string name="ro">Romania</string>
    <string name="rs">Serbia</string>
    <string name="ru">Russia</string>
    <string name="rw">Rwanda</string>
    <string name="sa">Saudi Arabia</string>
    <string name="sb">Solomon Islands</string>
    <string name="sc">Seychelles</string>
    <string name="sd">Sudan</string>
    <string name="se">Sweden</string>
    <string name="sg">Singapore</string>
    <string name="sh">Saint Helena, Ascension and Tristan da Cunha</string>
    <string name="si">Slovenia</string>
    <string name="sj">Svalbard and Jan Mayen</string>
    <string name="sk">Slovakia</string>
    <string name="sl">Sierra Leone</string>
    <string name="sm">San Marino</string>
    <string name="sn">Senegal</string>
    <string name="so">Somalia</string>
    <string name="sr">Suriname</string>
    <string name="ss">South Sudan</string>
    <string name="st">São Tomé and Príncipe</string>
    <string name="sv">El Salvador</string>
    <string name="sx">Sint Maarten</string>
    <string name="sy">Syria</string>
    <string name="sz">Eswatini (Swaziland)</string>
    <string name="tc">Turks and Caicos Islands</string>
    <string name="td">Chad</string>
    <string name="trivia_choose_title">Please choose from the following</string>
    <string name="number_of_questions">Number of questions</string>
    <string name="difficulty">Difficulty</string>
    <string name="confirm">Confirm</string>
</resources>