<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:camomile="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handlers"
            type="com.sera.memorygame.interfaces.Handlers" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSecondary"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/trivia_choose_title"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.95" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldNumberOfQuestions"
            style="@style/ThemeStyle.Box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/number_of_questions"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintWidth_percent="0.95">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/AutocompleteStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldCategory"
            style="@style/DropDownStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFieldNumberOfQuestions"
            app:layout_constraintWidth_percent="0.95">


            <AutoCompleteTextView
                style="@style/AutocompleteStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textDirection="locale"
                tools:ignore="LabelFor" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldDifficulty"
            style="@style/DropDownStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/difficulty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFieldCategory"
            app:layout_constraintWidth_percent="0.95">


            <AutoCompleteTextView
                style="@style/AutocompleteStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textDirection="locale"
                tools:ignore="LabelFor" />


        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTransparent"
            android:clickable="true"
            android:elevation="8dp"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/camomileSpinner"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

        </LinearLayout>


        <Button
            android:id="@+id/confirmBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:backgroundTint="?attr/colorOnPrimary"
            android:fontFamily="@font/annie_use_your_telescope"
            android:minWidth="140dp"
            android:onClick="@{handlers::onHandlerClicked}"
            android:text="@string/confirm"
            android:textColor="?attr/colorSecondary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>