<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handlers"
            type="com.sera.memorygame.interfaces.Handlers" />
    </data>

    <LinearLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_full"
        android:minHeight="300dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:elevation="2dp"
                android:padding="8dp"
                android:src="@drawable/launch_screen"
                android:transitionName="sharedImage"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp"
                app:civ_circle_background_color="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/imgFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorSecondary"
                android:onClick="@{handlers::onHandlerClicked}"
                android:src="@drawable/ic_baseline_photo_camera"
                app:elevation="6dp"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="@+id/image"
                app:layout_constraintEnd_toEndOf="@+id/image"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="@+id/image"
                app:layout_constraintTop_toTopOf="@+id/image"
                app:layout_constraintVertical_bias="1"
                app:maxImageSize="16dp"
                app:tint="?attr/colorOnPrimary"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/user_name"
                app:endIconMode="clear_text"
                app:layout_constraintBottom_toTopOf="@+id/cancelBtn"
                app:layout_constraintTop_toBottomOf="@+id/image"
                tools:layout_editor_absoluteX="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:backgroundTint="?attr/colorSecondary"
                android:onClick="@{handlers::onHandlerClicked}"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/positiveBtn" />

            <Button
                android:id="@+id/positiveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:backgroundTint="?attr/colorSecondary"
                android:onClick="@{handlers::onHandlerClicked}"
                android:text="@string/ok"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textField" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</layout>