<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handlers"
            type="com.sera.memorygame.interfaces.Handlers" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimarySurface"
            tools:context=".ui.start.StartFragment">

            <Button
                android:id="@+id/memoryBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorSecondary"
                android:minWidth="160dp"
                android:onClick="@{handlers::onHandlerClicked}"
                android:text="@string/play_memory"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/quizBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:backgroundTint="?attr/colorSecondary"
                android:fontFamily="@font/annie_use_your_telescope"
                android:minWidth="160dp"
                android:onClick="@{handlers::onHandlerClicked}"
                android:text="@string/play_flag_quiz"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/memoryBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:id="@+id/quizIndicator"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@drawable/circle_white_transparent"
                android:backgroundTint="?attr/colorSecondaryVariant"
                android:elevation="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/quizBtn"
                app:layout_constraintEnd_toEndOf="@+id/quizBtn"
                app:layout_constraintHorizontal_bias="1.04"
                app:layout_constraintStart_toStartOf="@+id/quizBtn"
                app:layout_constraintTop_toTopOf="@+id/quizBtn"
                app:layout_constraintVertical_bias="0" />

            <Button
                android:id="@+id/triviaBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:backgroundTint="?attr/colorSecondary"
                android:fontFamily="@font/annie_use_your_telescope"
                android:minWidth="160dp"
                android:onClick="@{handlers::onHandlerClicked}"
                android:text="@string/play_trivia"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/quizBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:id="@+id/triviaIndicator"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@drawable/circle_white_transparent"
                android:backgroundTint="?attr/colorSecondaryVariant"
                android:elevation="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/triviaBtn"
                app:layout_constraintEnd_toEndOf="@+id/triviaBtn"
                app:layout_constraintHorizontal_bias="1.04"
                app:layout_constraintStart_toStartOf="@+id/triviaBtn"
                app:layout_constraintTop_toTopOf="@+id/triviaBtn"
                app:layout_constraintVertical_bias="0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.9" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/backOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0"
            android:background="@color/black_semi_transparent"
            android:onClick="@{(view)->handlers.onHandlerClicked(view)}"
            android:orientation="horizontal"
            android:visibility="gone" />

        <include
            layout="@layout/bottom_sheet_layout"
            bind:handlers="@{handlers}" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>